WebCore:

2009-05-17  Kai Brüning  <kai@granus.net>

        Reviewed by Darin Adler.

        bug 25822: DOM normalize does not remove empty text node between element nodes
        https://bugs.webkit.org/show_bug.cgi?id=25822

        Test: fast/dom/Node/normalize.html

        * dom/Node.cpp:
        (WebCore::Node::normalize): Changed to remove any empty text nodes.

LayoutTests:

2009-05-17  Kai Brüning  <kai@granus.net>

        Reviewed by Darin Adler.

        Test case for bug 25822: DOM normalize does not remove empty text node between element nodes
        https://bugs.webkit.org/show_bug.cgi?id=25822

        The test case strives to test the whole functionality of Node's normalize().

        * fast/dom/Node/normalize-expected.txt: Added.
        * fast/dom/Node/normalize.html: Added.



Canonical link: https://commits.webkit.org/35727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43809 268f45cc-cd09-0410-ab3c-d52691b4dbfc